# QuickVTKExample

./: .gitignore  CMakeLists.txt  CMakePresets.json  Main.qml  MyVtkItem.cpp  MyVtkItem.h  README.md  main.cpp  presenter.h
